# Nyanko

./: README.md  package-lock.json  package.json  tailwind.config.js
.claude/: CLAUDE.md
.planning/: CODEX-RULES.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.2-MILESTONE-AUDIT.md
.planning/debug/: fit-height-corta-la-pagina.md  knowledge-base.md
.planning/debug/resolved/: manga-link-button-missing.md
.planning/milestones/: v0.2-MILESTONE-AUDIT.md  v0.2-REQUIREMENTS.md
.planning/phases/01-electron-shell-scaffold-data-dir-lock/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-VERIFICATION.md
.planning/phases/01-fundaciones-limitador-esquema-y-modelo-de-progreso/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-main-core-sidecar-lifecycle-logging/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-PATTERNS.md
.planning/phases/02-motor-de-fuentes-contrato-presupuesto-y-taxonom-a-de-errores/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-native-boundary-tauri-removal/: 03-01-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/backend/: .env.example  pyproject.toml  sidecar.py
apps/backend/nyanko_api/: __init__.py  anilist.py  chapter_recognition.py  config.py  database.py  http.py  instance.py  kitsu.py  linking.py  main.py  matcher.py  models.py  myanimelist.py  normalizer.py  progress.py  provider_mappings.py  providers.py  scanner.py  secrets.py  stats.py  torrents.py
apps/backend/nyanko_api/detectors/: __init__.py  base.py  browser.py  mpc_hc.py  mpv.py  pause.py  potplayer.py  process.py  smtc.py  vlc.py  window.py
apps/backend/nyanko_api/sources/: __init__.py  contract.py  engine.py  errors.py  local_archive.py  registry.py
apps/backend/scripts/: build_sidecar.py  check_persisted_urls.py  check_stale_asset_ports.py  dev.py  verify_real_db_migration.py
apps/backend/tests/: conftest.py  test_anilist.py  test_chapter_recognition.py  test_config.py  test_database.py  test_detectors.py  test_extension.py  test_http.py  test_instance.py  test_linking.py  test_main.py  test_manga_api.py  test_manga_link.py  test_manga_pages.py  test_matcher.py  test_myanimelist.py  test_normalizer.py  test_packaged_sources.py  test_persisted_urls.py  test_progress.py  test_provider_mappings.py  test_providers.py  test_reader_persistence.py  test_scanner.py  test_secrets.py  test_source_api.py  test_source_budget.py  test_source_engine.py  test_sources.py  test_stats.py  test_torrents.py
apps/backend/tests/fixtures/: nyaa_sample.xml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  index.html  package.json  postcss.config.cjs  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  EULA.txt  installer-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: discord.rs  lib.rs  main.rs  sidecar.rs  tray.rs  window_prefs.rs
apps/extension/: README.md  manifest.chromium.json  manifest.firefox.json  package.json
docs/: README.md
docs/specs/: 2026-07-09-tauri-to-electron-migration-design.md  progress-model.md
(+143 files in other folders)
