[project]
name = "nyanko-api"
version = "0.1.0"
description = "Local API and media detection service for Nyanko"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "keyring>=25.7,<26",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pyinstaller>=6.11,<7",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["nyanko_api*"]
exclude = ["data", "dist", "build", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
