[package]
name = "nyanko-desktop"
version = "0.1.12"
description = "Nyanko anime tracker desktop client"
authors = ["Nyanko contributors"]
edition = "2021"

[lib]
name = "nyanko_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools: habilita F12/inspeccionar en builds de release para diagnosticar en la app
# instalada. Quitar (o mover a un feature propio) antes de una release pública final.
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
ureq = "2"
tauri-plugin-autostart = "2.5.1"
discord-rich-presence = "0.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
